syntax = "proto3";

package dev;

service Register {
	rpc Read(ReadRequest) returns (State) {}
	rpc Write(State) returns (WriteResponse) {}
	rpc WriteAsync(stream State) returns (Empty) {}
}

message State {
	string Value = 1;
	int64 Timestamp = 2;
}

message WriteResponse {
	bool New = 1;
}

message ReadRequest {}

message Empty {}
